# cassetteai

./: README.md  pyproject.toml
examples/: test_langgraph_agent.py
examples/cassettes/: cost_budget_multi_city.json  no_alert_on_normal_query.json  single_city_no_calc.json  unknown_city_graceful.json  weather_then_calculate.json
src/agentape/: __init__.py  assertions.py  cassette.py  mock_tools.py  plugin.py  proxy.py  session.py
src/agenttest/: __init__.py  plugin.py  proxy.py  session.py
