[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttest"
version = "0.1.0"
description = "pytest for agents: record, replay, assert"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Edoardo Federici", email = "edoardo.federici.ai@gmail.com" }
]
keywords = ["llm", "agents", "testing", "pytest", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/banda-larga/agenttest"
Repository = "https://github.com/banda-larga/agenttest"

dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.7",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "rich>=13.0",
]

[project.optional-dependencies]
langgraph = [
    "langchain>=0.3",
    "langgraph>=0.2",
    "langgraph-checkpoint>=1.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]
llamaindex = [
    "llama-index-core>=0.11",
    "llama-index-llms-openai>=0.3",
]
dev = [
    "agenttest[langgraph,llamaindex]",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["agenttest[langgraph,llamaindex]"]

[project.entry-points."pytest11"]
agenttest = "agenttest.plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(name)s %(message)s"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.hatch.build.targets.wheel]
packages = ["src/agenttest"]